# ChangeLog for sci-chemistry/ccpn
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/ccpn/ChangeLog,v 1.133 2014/02/05 15:32:06 jlec Exp $

*ccpn-2.3.1_p140205 (05 Feb 2014)

  05 Feb 2014; Justin Lecher <jlec@gentoo.org> +ccpn-2.3.1_p140205.ebuild:
  Latest Python patches

*ccpn-2.3.1_p140131-r1 (31 Jan 2014)

  31 Jan 2014; Justin Lecher <jlec@gentoo.org> +ccpn-2.3.1_p140131-r1.ebuild,
  -ccpn-2.3.1_p140131.ebuild:
  Update patch

*ccpn-2.3.1_p140131 (31 Jan 2014)

  31 Jan 2014; Justin Lecher <jlec@gentoo.org> +ccpn-2.3.1_p140131.ebuild:
  Add todays Python patches

*ccpn-2.3.1_p140120 (20 Jan 2014)

  20 Jan 2014; Justin Lecher <jlec@gentoo.org> +ccpn-2.3.1_p140120.ebuild:
  Todays python patches

*ccpn-2.3.1_p131127 (27 Nov 2013)

  27 Nov 2013; Justin Lecher <jlec@gentoo.org> -ccpn-2.2.2_p121125.ebuild,
  -ccpn-2.2.2_p130110.ebuild, -ccpn-2.2.2_p130116.ebuild,
  -ccpn-2.2.2_p130213.ebuild, -ccpn-2.2.2_p130318.ebuild,
  -ccpn-2.2.2_p130318-r1.ebuild, -ccpn-2.2.2_p130530.ebuild,
  -ccpn-2.2.2_p130618.ebuild, -ccpn-2.2.2_p130705.ebuild,
  -ccpn-2.3.1_p130813.ebuild, -ccpn-2.3.1_p130814.ebuild,
  -ccpn-2.3.1_p130822.ebuild, -ccpn-2.3.1_p130918.ebuild,
  -ccpn-2.3.1_p130930.ebuild, -ccpn-2.3.1_p131008.ebuild,
  -ccpn-2.3.1_p131010.ebuild, -ccpn-2.3.1_p131015.ebuild,
  -ccpn-2.3.1_p131018.ebuild, -ccpn-2.3.1_p131107.ebuild,
  +ccpn-2.3.1_p131127.ebuild:
  Todays pthon patches; drop old

*ccpn-2.3.1_p131125 (25 Nov 2013)

  25 Nov 2013; Justin Lecher <jlec@gentoo.org> +ccpn-2.3.1_p131125.ebuild:
  Todays pthon patches

*ccpn-2.3.1_p131119 (19 Nov 2013)

  19 Nov 2013; Justin Lecher <jlec@gentoo.org> +ccpn-2.3.1_p131119.ebuild,
  +files/talosn.patch:
  Add todays python patches

*ccpn-2.3.1_p131107 (07 Nov 2013)

  07 Nov 2013; Justin Lecher <jlec@gentoo.org> +ccpn-2.3.1_p131107.ebuild:
  Update Python patches

*ccpn-2.3.1_p131018 (18 Oct 2013)
