@@ -1,6 +1,11 @@
 # ChangeLog for sci-chemistry/ccpn
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/ccpn/ChangeLog,v 1.133 2014/02/05 15:32:06 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/ccpn/ChangeLog,v 1.134 2014/03/10 06:51:57 jlec Exp $
+
+*ccpn-2.3.1_p140310 (10 Mar 2014)
+
+  10 Mar 2014; Justin Lecher <jlec@gentoo.org> +ccpn-2.3.1_p140310.ebuild:
+  Add todays python patches
 
 *ccpn-2.3.1_p140205 (05 Feb 2014)
 
